update: codesandbox test link

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>css-flat</title>
-    <link href="../css-flat.css" rel="stylesheet" type="text/css" />
+    <link href="css-flat.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <main>main</main>
